--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,4 @@
 <h1>StaticPages#contact</h1>
 <p>Find me in app/views/static_pages/contact.html.erb</p>
-<h2>Contact me at 123456789 Mon - Thursday</h2>
+<h2>Contact 123456789 Mon - Thursday only. Any other day, I'm off to the beach!</h2>
+<img src="https://goo.gl/Ykn2G4">
