--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,3 +2,4 @@
 <p>Welcome! The date and time is <%= Time.now %></p>
 <h1>Welcome to Florida</h1>
 <h2>The SunShine State of beautiful beaches and delicious citrus!</h2>
+<img src="https://goo.gl/t30r5X">
