--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,28 @@
-<h1>StaticPages#index</h1>
-<p>Welcome! The date and time is <%= Time.now %></p>
-<h1>Welcome to Florida</h1>
-<h2>The SunShine State of beautiful beaches and delicious citrus!</h2>
-<img src="https://goo.gl/t30r5X">
+<!-- <h1>StaticPages#index</h1> -->
+<!-- <p>Welcome! The date and time is %= Time.now %></p> -->
+<!-- <h1>Adorable Dogs Gallery</h1> -->
+
+<div class="image-header">
+		<%= image_tag("huskysnow.jpeg", class: "img-responsive") %>
+		<h1 class="header-text">It's A Dog's <br> Life</h1>
+	</div><!-- end image-header -->
+
+	<div class="maincat-title">
+		<h2>Check Out the Types of Dogs</h2>
+	</div>
+
+	<div class="container">
+      <div class="row" id="maincategory">
+        <div class="col-md-4 col-xs-6"><%= image_tag("Husky.jpg", class: "img-responsive") %> The Big Boys
+        </div><!-- colmd3 -->
+        
+        <div class="col-md-4 col-xs-6"><%= image_tag("Corgi.jpeg", class: "img-responsive") %> Medium's My Middle Name
+        </div><!-- colmd3 -->
+        
+        <div class="col-md-4 col-xs-6"><%= image_tag("puppy-yorkshire.jpeg", class: "img-responsive") %> Small but Mighty
+        </div><!-- colmd3 -->
+      </div><!-- end maincategory -->
+      
+      <div></div>
+      <div></div>
+
